--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -52,7 +52,7 @@
   + Components +
   +------------+*/
 /*+--- Button ---+*/
-@button-background-color: transparent;
+@button-background-color: @base-background-color;
 @button-background-color-hover: @input-border-color;
 @button-background-color-selected: @input-border-color;
 @button-border-color: @input-border-color;
